<resources>
    <string name="app_name">Calculator</string>
    <string name="division_error">ОШИБКА ДЕЛЕНИЯ НА НОЛЬ</string>
    <string name="ac">AC</string>
    <string name="error">Ошибка</string>
    <string name="delete">Del</string>
    <string name="plus_minus">+/-</string>
    <string name="division_sign">/</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="multiplication_sign">*</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="minus_sign">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="plus_sign">+</string>
    <string name="number_0">0</string>
    <string name="decimal_sign">,</string>
    <string name="equals_sign">=</string>
    <string name="about_app">About App</string>
    <string name="aboutApp">О приложении</string>
    <string name="copyright_c_skirdad_and_russabit_2023">Copyright © SkirdaD and russabit, 2023</string>
    <string name="view_source_code_on_github">view source code on github</string>
    <string name="write_to_developers">write to developers</string>
    <string name="rate_the_application">rate the application</string>
    <string name="calculator">Calculator</string>
    <string name="calculation_training">Calculation Training</string>
    <string name="your_answer">Answer</string>
    <string name="ok">OK</string>
    <string name="refresh">refresh</string>
    <string name="help_me_count">Help me count</string>
    <string name="try_to_count">Try to count...</string>
    <string name="operations_history">Operations History</string>
</resources>