<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:gravity="right|center_vertical"
        android:text="@string/number_0"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_gray_button"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_gray_button"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_gray_button"
                android:text="@string/plus_minus"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_button"
                android:text="@string/division_sign"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_7"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_8"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_9"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_button"
                android:text="@string/multiplication_sign"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_4"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_6"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_button"
                android:text="@string/minus_sign"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_button"
                android:text="@string/number_3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange_button"
                android:text="@string/plus_sign"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/gray_button"
                    android:text="@string/number_0"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:backgroundTint="@color/gray_button"
                    android:text="@string/decimal_sign"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonResult"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="0.25"
                    android:backgroundTint="@color/orange_button"
                    android:text="@string/equals_sign"
                    android:textColor="@color/white"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>